[package]
name = "hyper_x_cloud_ii_wireless"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
hidapi = "2.3.3"
thistermination = "1.0.0"
[target.'cfg(unix)'.hyper_x_cloud_ii_wireless.dependencies]
ksni = "0.2.0"