[package]
name = "hyper_x_cloud_ii_wireless"
version = "1.0.1"
edition = "2021"
authors = ["Lennard Kittner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
hidapi = "2.3.3"
thistermination = "1.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2.0"
