[package]
name = "hyper_x_cloud_ii_wireless"
version = "1.1.0"
edition = "2021"
authors = ["Lennard Kittner"]
description = "A CLI and tray application for monitoring and managing HyperX headsets."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
hidapi = "2.3.3"
thistermination = "1.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2.0"
